data/derived/comb/progs/unify/prog1592.ml.out
Characters 197-207:
  | n ->  append (helper (n / 10)) (n mod 10) in
                                   ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
